<resources>
    <string name="app_name">Water Reminder</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">History</string>
    <string name="title_notifications">Settings</string>

    <string name="Name_label">Name :</string>
    <string name="Name_value">UserName</string>
    <string name="Height_label">Height :</string>
    <string name="Height_default_value">183</string>
    <string name="Height_metric">cms</string>
    <string name="Weight_label">Weight</string>
    <string name="Weight_default_value">80</string>
    <string name="Weight_metric">Kgs</string>
    <string name="Reminder_label">Remind From :</string>
    <string name="Reminder_start_value">10.00</string>
    <string name="Reminder_end_value">22.00</string>
    <string name="hypen">-</string>
    <string name="Rate_us">Rate Us!</string>
    <string name="share">Share with</string>
    <string name="Clear_data">Clear Data</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="waterIntakeLabel">Water Intake</string>
    <string name="UserwaterValueDefault">1000</string>
    <string name="by">/</string>
    <string name="waterMetric">ml</string>
    <string name="add">Add :</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="water_intake_value">Water Intake Value</string>
    <string name="water_intake_background">Water Intake Background</string>
    <string name="initial_helper_text">Let\'s Start Getting hydrated   Click and Add water you have consumed</string>
    <string name="percent_completed_title">% Completed</string>
    <string name="quantity_consumed_title">Quantity Consumed</string>
    <string name="date_title">Date :</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="waterValues_array">
        <item>100 ml</item>
        <item>200 ml</item>
        <item>300 ml</item>
        <item>400 ml</item>
        <item>500 ml</item>
        <item>600 ml</item>
        <item>700 ml</item>
        <item>800 ml</item>
        <item>900 ml</item>
        <item>1000 ml</item>
    </string-array>

</resources>
