<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/todayDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:fontFamily="serif-monospace"
        android:padding="8dp"
        android:text="@string/date_title"
        android:textAlignment="center"
        android:textSize="21sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/todayDate_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:fontFamily="monospace"
        android:padding="8dp"
        android:textAlignment="center"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintStart_toEndOf="@+id/todayDate"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="12/12/2019" />

    <TextView
        android:id="@+id/quantityConsumed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:fontFamily="serif-monospace"
        android:padding="8dp"
        android:text="@string/quantity_consumed_title"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/todayDate" />

    <TextView
        android:id="@+id/quantityConsumed_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif-monospace"
        android:padding="8dp"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/quantityConsumed"
        app:layout_constraintStart_toStartOf="@+id/quantityConsumed"
        app:layout_constraintTop_toBottomOf="@+id/quantityConsumed"
        tools:text="10000/10000 ml" />

    <TextView
        android:id="@+id/completedPercentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:fontFamily="serif-monospace"
        android:padding="8dp"
        android:text="@string/percent_completed_title"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/todayDate" />

    <TextView
        android:id="@+id/completedPercentage_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif-monospace"
        android:padding="8dp"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/completedPercentage"
        app:layout_constraintStart_toStartOf="@id/completedPercentage"
        app:layout_constraintTop_toBottomOf="@id/completedPercentage"
        tools:text="100" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:fontFamily="cursive"
        android:padding="8dp"
        android:text="@string/initial_helper_text"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:padding="8dp"
        android:src="@drawable/ic_cup_water_white_48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>